# autologin

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PRD.md  README.md  SETTINGS_WINDOW_FIX.md  app.manifest
docs/: class-diagram.mermaid  sequence-diagram.mermaid
src/: App.cpp  App.h
src/model/: AuthEngine.h  ConnectivityChecker.h  Logger.cpp  Scheduler.cpp  Scheduler.h  Settings.cpp  Settings.h
src/platform/: HotspotManager.h  NetworkAdapter.cpp  Notification.cpp  Notification.h  Registry.cpp  Registry.h  SystemTray.cpp  ToastWindow.cpp  ToastWindow.h
src/view/: Main.qml  SettingsWindow.qml
src/view/Cards/: AccentColorCard.qml  AccountCard.qml  BasicSettingsCard.qml  NetworkSettingsCard.qml  ScheduleCard.qml  SystemStatusCard.qml
src/view/Components/: CardSpinBox.qml  ColorDot.qml  FloatingScrollBar.qml  GlassCard.qml  LucideIcon.qml  ShadowText.qml  StyledScrollBar.qml  SwitchToggle.qml  ThemeCard.qml  ThemeToggle.qml  ToastPositionSelector.qml
src/viewmodel/: AuthViewModel.cpp  SettingsViewModel.h  ThemeViewModel.cpp  ThemeViewModel.h  TrayViewModel.cpp  TrayViewModel.h
src_backup_20260518/: App.cpp  main.cpp
src_backup_20260518/model/: AuthEngine.cpp  ConnectivityChecker.cpp  Logger.h  Settings.cpp  Settings.h
src_backup_20260518/platform/: HotspotManager.cpp  NetworkAdapter.h  Notification.h  SystemTray.h  Win32Defs.h
src_backup_20260518/view/: SettingsWindow.qml
src_backup_20260518/view/Cards/: AccountCard.qml  BasicSettingsCard.qml  NetworkSettingsCard.qml  ScheduleCard.qml
src_backup_20260518/view/Components/: CardSpinBox.qml  SwitchToggle.qml  ThemeToggle.qml
src_backup_20260518/viewmodel/: AuthViewModel.h  ThemeViewModel.cpp  ThemeViewModel.h  TrayViewModel.cpp
src_backup_20260518_v2/: App.h
src_backup_20260518_v2/model/: AuthEngine.h  Settings.h
src_backup_20260518_v2/platform/: Notification.cpp
src_backup_20260518_v2/view/: Main.qml  SettingsWindow.qml
src_backup_20260518_v2/view/Cards/: AccountCard.qml  BasicSettingsCard.qml  NetworkSettingsCard.qml  ScheduleCard.qml
src_backup_20260518_v2/view/Components/: CardSpinBox.qml  LucideIcon.qml  SwitchToggle.qml  ThemeToggle.qml
src_backup_20260518_v2/viewmodel/: SettingsViewModel.cpp  SettingsViewModel.h  ThemeViewModel.cpp  ThemeViewModel.h  TrayViewModel.h
